Updated height to correct distortion

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,7 +20,7 @@ canvas {
     flex: 3 100%;
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 1000;
 }
 
 stats {
